Correct wrapping of nav elements

--- a/src/css/blocks/_block-header-2.scss
+++ b/src/css/blocks/_block-header-2.scss
@@ -1,6 +1,6 @@
 .block-header-2 {
 
-  .navbar-brand { justify-content: center; }
+  .navbar { justify-content: center; }
   .navbar-primary { justify-content: flex-start; }
   .navbar-secondary { justify-content: flex-end; }
 
